# ChangeLog for net-mail/dbmail
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/dbmail/ChangeLog,v 1.60 2014/03/07 18:48:33 lordvan Exp $

*dbmail-3.1.12 (07 Mar 2014)

  07 Mar 2014; Thomas Raschbacher <lordvan@gentoo.org> +dbmail-3.1.12.ebuild,
  files/dbmail-imapd.initd, files/dbmail-lmtpd.initd, files/dbmail-pop3d.initd,
  files/dbmail-timsieved.initd, -dbmail-3.0.2.ebuild:
  new init scripts (seperate for each service again)
  version bump and removed 3.0.2

  03 Mar 2014; Pacho Ramos <pacho@gentoo.org> dbmail-3.1.9.ebuild:
  amd64 stable, bug #498954

*dbmail-3.1.11 (27 Feb 2014)

  27 Feb 2014; Thomas Raschbacher <lordvan@gentoo.org> +dbmail-3.1.11.ebuild:
  version bump

  23 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> dbmail-3.1.9.ebuild:
  x86 stable wrt bug #498954

*dbmail-3.1.10 (22 Jan 2014)

  22 Jan 2014; <lordvan@gentoo.org> +dbmail-3.1.10.ebuild:
  version bump

*dbmail-3.1.9 (09 Jan 2014)

  09 Jan 2014; <lordvan@gentoo.org> -dbmail-3.1.7.ebuild, -dbmail-3.1.8.ebuild,
  +dbmail-3.1.9.ebuild:
  added 3.1.9 bugfix release and removed old 3.1.x versions (both affected by
  bugs)

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> dbmail-3.0.2.ebuild,
  dbmail-3.1.7.ebuild, dbmail-3.1.8.ebuild:
  Inherit the user eclass for enewuser/etc...

*dbmail-3.1.8 (17 Dec 2013)

  17 Dec 2013; <lordvan@gentoo.org> -dbmail-3.1.2.ebuild, -dbmail-3.1.3.ebuild,
  -dbmail-3.1.4.ebuild, -dbmail-3.1.6.ebuild, +dbmail-3.1.8.ebuild:
  removed old versions and added new version

*dbmail-3.1.7 (24 Sep 2013)

  24 Sep 2013; <lordvan@gentoo.org> +dbmail-3.1.7.ebuild:
  new release

*dbmail-3.1.6 (16 Sep 2013)

  16 Sep 2013; <lordvan@gentoo.org> +dbmail-3.1.6.ebuild:
  new version

*dbmail-3.1.4 (02 Sep 2013)

  02 Sep 2013; <lordvan@gentoo.org> +dbmail-3.1.4.ebuild:
  new version (bugfix only release)

*dbmail-3.1.3 (20 Aug 2013)

  20 Aug 2013; <lordvan@gentoo.org> +dbmail-3.1.3.ebuild: