@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst setup
+DEPEND=dev-db/libzdb sieve? ( >=mail-filter/libsieve-2.2.1 ) ldap? ( >=net-nds/openldap-2.3.33 ) app-text/asciidoc app-text/xmlto app-crypt/mhash sys-libs/zlib >=dev-libs/gmime-2.4.6:2.4 >=dev-libs/glib-2.16 dev-libs/libevent ssl? ( dev-libs/openssl )
+DESCRIPTION=DBMail is an open-source project that enables storage of mail messages in a relational database.
+EAPI=4
+HOMEPAGE=http://www.dbmail.org/
+IUSE=ldap sieve +sqlite ssl static
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-db/libzdb sieve? ( >=mail-filter/libsieve-2.2.1 ) ldap? ( >=net-nds/openldap-2.3.33 ) app-text/asciidoc app-text/xmlto app-crypt/mhash sys-libs/zlib >=dev-libs/gmime-2.4.6:2.4 >=dev-libs/glib-2.16 dev-libs/libevent ssl? ( dev-libs/openssl )
+SLOT=0
+SRC_URI=http://www.dbmail.org/download/3.1/dbmail-3.1.13.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=eb833912492269fecea2d2c82b25eeed
