@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/dbmail
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/dbmail/ChangeLog,v 1.60 2014/03/07 18:48:33 lordvan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/dbmail/ChangeLog,v 1.61 2014/03/22 09:24:48 lordvan Exp $
+
+*dbmail-3.1.13 (22 Mar 2014)
+
+  22 Mar 2014; Thomas Raschbacher <lordvan@gentoo.org> +dbmail-3.1.13.ebuild:
+  added new version
 
 *dbmail-3.1.12 (07 Mar 2014)
 
